# txt2srt

./: README.md  pyproject.toml
tests/: test_txt2srt.py
txt2srt/: __init__.py  cli.py  core.py
